Extract the task list into a TaskList class
GudGoi holds the ArrayList and every command reaches into it directly.
Several methods each remember that the user counts from 1 while the
list indexes from 0, so the same correction is written more than once.

Let's move the list into a TaskList class. Positions counted from 1 are
the language it speaks, and it is the only code that has to know about
the offset.

The bounds check moves with the list, because only the list knows how
long it is. Reading the number out of the command text does not: that is
parsing, and it stays behind as parsePosition until the parser exists.
So taskAt becomes two steps that raise the same two Exceptions in the
same order as before.

TaskList neither saves nor prints, for the reason Storage does not
print. GudGoi still decides the order: change the list, ask Storage to
write it, undo the change if the write failed, then ask Ui to say what
happened. insert and removeLast exist for that undo and for nothing
else, which their comments say.

asList hands out a read-only view. Storage and the numbered listing only
read, and routing every change through the methods keeps this class the
one place that decides what the agenda holds.

The tasks field is no longer final, because start-up now replaces it
with a list built from what storage returned rather than filling an
empty one.

The change preserves behaviour. The build before and the build after
were run over eight scenarios, including stale task numbers after a
delete, deleting down to an empty list, and a read-only file that forces
an add, a mark, an unmark and a delete each to be undone. Both stdout
and the save file came out identical, byte for byte.